# tabular

./: README.md  pyproject.toml
_tests/: setup.py  table_partitions.py  test_template_converter.py
_tests/graphs/: swedracor_example.ttl
_tests/templates/: corpustable_template.ttl
tabular/: __init__.py  converter_rdf_test.ttl  converters.py  tabular-cli.py  tabular.py  tabular_types.py  tacl.py
tabular/cli/: context_module.py  converter_setup.py  dataframe_utils.py  df_utils.py  docs.py
tabular/cli_utils/: click_custom.py  df_utils.py
tests/data/: __init__.py
tests/data/context_module/: test_module.py
tests/data/table_data/: __init__.py  bookstore.csv  bookstore.py  corpusTable_prep.csv  corpusTable_prep.xlsx  tables.py  test.csv  test.txt
tests/data/targets/graphs/: cortab_name_acronym.ttl
tests/data/targets/txt/: books.txt
tests/data/targets/xml/: bookstore.xml
tests/data/templates/: books.j2  books_row.j2  books_table.j2  bookstore.j2  context_test.j2  row_template.j2  table_template.j2  template_cortab_name_acronym.ttl  test.j2
tests/test_cli/: test_cli_graph.py  test_cli_noparse.py  test_dataframe_utils.py
tests/test_converters/test_template_converters/: test_all_graph_converters.py  test_field_graph_converter.py  test_row_graph_converter.py  test_template_converter.py  test_template_graph_converter.py  test_template_xml_converter.py
