[tool.poetry]
name = "tabular"
version = "0.1.0"
description = ""
authors = ["Lukas Plank <lupl@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
jinja2 = "^3.1.2"
rdflib = "^6.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
